--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nodemailer": "^7.0.11",
     "nuxt": "^4.2.1",
     "pdf-parse": "^2.4.5",
-    "pdf2json": "^4.0.0"
+    "pdf2json": "^4.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
