update smtp email

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# SMTP Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-specific-password
+SMTP Configuration
+SMTP_HOST=mail.infomaniak.com
+SMTP_PORT=465
+SMTP_USER=info@clegal-avocats.ch
+SMTP_PASS=p9#QTdViDQ4T%W43
+
+# SMTP_HOST=sandbox.smtp.mailtrap.io
+# SMTP_PORT=2525
+# SMTP_USER=39da1804f354be
+# SMTP_PASS=4a2d9e2a092931
 
 # Email Settings
-FIRM_EMAIL=info@pont-rouge-avocats.ch
+FIRM_EMAIL=info@clegal-avocats.ch
