update sendaing mail

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,8 @@
-SMTP Configuration
-SMTP_HOST=mail.infomaniak.com
+# SMTP Configuration
+SMTP_HOST=
 SMTP_PORT=465
-SMTP_USER=info@clegal-avocats.ch
-SMTP_PASS=p9#QTdViDQ4T%W43
-
-# SMTP_HOST=sandbox.smtp.mailtrap.io
-# SMTP_PORT=2525
-# SMTP_USER=39da1804f354be
-# SMTP_PASS=4a2d9e2a092931
+SMTP_USER=
+SMTP_PASS=
 
 # Email Settings
-FIRM_EMAIL=info@clegal-avocats.ch
+FIRM_EMAIL=
