--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^4.2.1",
     "pdf-parse": "^2.4.5",
     "pdf2json": "^4.0.0",
+    "vue-recaptcha": "^3.0.0-alpha.6",
     "zod": "^4.1.13"
   },
   "devDependencies": {
