--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
+    "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
@@ -18,6 +19,9 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@nuxt/image": "^2.0.0",
+    "@nuxtjs/sitemap": "^7.5.2",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^22.14.0",
     "@types/nodemailer": "^7.0.4",
     "typescript": "~5.8.2",
