--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.562.0",
     "nodemailer": "^7.0.11",
     "nuxt": "^4.2.1",
     "pdf-parse": "^2.4.5",
